# cli_rm_builder

./: README.md  pyproject.toml  requirements.txt
plugins/filter/: to_argspec.py
roles/run/vars/: main.yml
