[tool.poetry]
name = "cli_rm_builder"
version = "0.1.0"
description = ""
authors = ["Maarten Wallraf <maarten.wallraf@trifinance.be>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
